Fixed nav UI bug
Wasn't adding background when squished and wrapped

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,7 +40,7 @@ a {
     background: rgb(17,156,252);
     background: linear-gradient(0deg, rgba(17,156,252,1) 0%, rgba(4,54,168,1) 50%, rgba(57,31,254,1) 100%); 
     width: 100%;
-    height: 10%;
+    min-height: 10%;
     flex: 0 0 auto;
 }
 
